--- a/VSExam/src/main/res/layout/actionbar_list_item.xml
+++ b/VSExam/src/main/res/layout/actionbar_list_item.xml
@@ -5,6 +5,8 @@
           android:gravity="center_vertical"
           android:paddingStart="?android:attr/listPreferredItemPaddingStart"
           android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
+          android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
+          android:paddingRight="?android:attr/listPreferredItemPaddingRight"
           android:minHeight="?attr/listPreferredItemHeightSmall"
           android:textColor="@color/white"
           android:background="@color/app_blue"
