--- a/VSExam/src/main/res/layout/logo.xml
+++ b/VSExam/src/main/res/layout/logo.xml
@@ -6,6 +6,7 @@
     <ImageView android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
+               android:contentDescription="@string/logo"
                android:adjustViewBounds="true"/>
 
     <ProgressBar android:id="@+id/hide"
