--- a/VSExam/src/main/res/values/color.xml
+++ b/VSExam/src/main/res/values/color.xml
@@ -10,6 +10,7 @@
     <color name="dark_text">#585858</color>
     <color name="divider_light">#cccccc</color>
     <color name="highlighted">#9ed8ee</color>
+    <color name="grey">#b0b0b0</color>
 
     <color name="green">#28921f</color>
     <color name="red">#b00006</color>
