--- a/VSExam/src/main/res/values/styles.xml
+++ b/VSExam/src/main/res/values/styles.xml
@@ -1,18 +1,46 @@
 <resources>
 
     <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light">
-        <item name="android:textColor">@color/dark_text</item>
     </style>
 
     <style name="AppTheme" parent="AppBaseTheme">
-
+        <item name="actionBarStyle">@style/AppActionBar</item>
+        <item name="actionMenuTextColor">@color/white</item>
+        <item name="actionBarItemBackground">@drawable/transparent_button</item>
+        <item name="android:spinnerDropDownItemStyle">@style/TextItemWhite</item>
     </style>
 
-    <style name="StartingTheme" parent="AppBaseTheme">
+    <style name="TextItemWhite" parent="@style/Widget.AppCompat.Light.DropDownItem.Spinner">
+        <item name="android:textAppearance">@style/TextWhite</item>
+    </style>
+
+    <style name="AppActionBar" parent="@style/Widget.AppCompat.Light.ActionBar">
+        <item name="android:background">@color/app_blue</item>
+        <item name="titleTextStyle">@style/TextWhite</item>
+    </style>
+
+    <style name="TextWhite" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="StartingTheme" parent="StartingThemeBase"> </style>
+
+    <style name="StartingThemeBase" parent="AppBaseTheme">
         <item name="windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/grey</item>
+        <item name="android:buttonStyle">@style/StartingThemeButton</item>
     </style>
 
+    <style name="StartingThemeButton" parent="@android:style/Widget.Button">
+        <item name="android:background">@drawable/transparent_button</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:paddingLeft">32dp</item>
+        <item name="android:paddingRight">32dp</item>
+        <item name="android:paddingTop">14dp</item>
+        <item name="android:paddingBottom">14dp</item>
+    </style>
 
     <style name="ResponsiveLayout">
         <item name="android:orientation">vertical</item>
@@ -91,16 +119,19 @@
         <item name="android:padding">5dp</item>
     </style>
 
+    <style name="LogoView.Medium" parent="LogoView">
+        <item name="android:layout_width">46dp</item>
+        <item name="android:layout_height">56dp</item>
+    </style>
+
     <style name="LogoView.Large" parent="LogoView">
         <item name="android:layout_width">55dp</item>
         <item name="android:layout_height">66dp</item>
-        <item name="android:layout_margin">5dp</item>
     </style>
 
     <style name="LogoView.VeryLarge" parent="LogoView">
         <item name="android:layout_width">80dp</item>
         <item name="android:layout_height">96dp</item>
-        <item name="android:layout_margin">0dp</item>
     </style>
 
     <style name="ShadowBox">
@@ -195,6 +226,10 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_centerInParent">true</item>
+    </style>
+
+    <style name="ResponsiveExpendingWidth600">
+        <item name="android:layout_width">match_parent</item>
     </style>
 
 </resources>
