--- a/VSExam/src/main/res/drawable/shadow_bottom.xml
+++ b/VSExam/src/main/res/drawable/shadow_bottom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:angle="270"
-              android:startColor="#50bbbbbb"
+              android:startColor="@color/app_blue_lighter"
               android:endColor="#00000000" />
     <size android:width="5dp" />
 </shape>
