--- a/VSExam/src/main/res/values-v14/styles.xml
+++ b/VSExam/src/main/res/values-v14/styles.xml
@@ -1,9 +1,11 @@
 <resources>
-    <style name="AppTheme" parent="AppBaseTheme">
+    <!--<style name="AppTheme" parent="Theme.App">
         <item name="android:actionBarStyle">@style/AppActionBar</item>
         <item name="android:actionMenuTextColor">@color/white</item>
         <item name="android:actionBarItemBackground">@drawable/transparent_button</item>
         <item name="android:spinnerDropDownItemStyle">@style/TextItemWhite</item>
+        <item name="colorPrimary">@color/app_blue</item>
+        <item name="colorPrimaryDark">@color/app_blue_light</item>
     </style>
 
     <style name="AppActionBar" parent="@style/Widget.AppCompat.Light.ActionBar">
@@ -13,5 +15,5 @@
 
     <style name="StartingTheme" parent="StartingThemeBase">
         <item name="android:editTextColor">@color/white</item>
-    </style>
+    </style>-->
 </resources>
