--- a/VSExam/src/main/res/values/dimens.xml
+++ b/VSExam/src/main/res/values/dimens.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <dimen name="classmate_list_item_height">50dp</dimen>
     <dimen name="shadowbox_padding">15dp</dimen>
-
     <dimen name="sliding_pane_width">280dp</dimen>
     <dimen name="details_inner_padding">3dp</dimen>
     <dimen name="data_header_content_pair_margin">3dp</dimen>
     <dimen name="data_layout_margin_vertical">10dp</dimen>
     <dimen name="data_layout_margin_horizontal">5dp</dimen>
+    <dimen name="keyline_2_minus_16dp">56dp</dimen>
+    <dimen name="keyline_2">72dp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
 </resources>
