--- a/VSExam/src/main/res/values/styles.xml
+++ b/VSExam/src/main/res/values/styles.xml
@@ -1,37 +1,40 @@
 <resources>
 
-    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light">
+    <!-- Root styles that vary by API level -->
+    <!-- Disable RTL support on older devices -->
+    <!-- Prevents crash on certain devices to namespace conflict -->
+    <style name="FrameworkRoot.Theme" parent="Theme.AppCompat.Light.NoActionBar" />
+    <style name="FrameworkRoot.Widget" parent="Theme.AppCompat.Light.NoActionBar" />
+
+    <!-- Immediate parent theme to specify base values for custom attributes -->
+    <style name="Theme" parent="FrameworkRoot.Theme" />
+
+    <style name="Theme.Reponsive" parent="Theme.Base"> </style>
+
+    <style name="Theme.Base" parent="Theme">
+        <item name="actionBarIconColor">#fff</item>
+        <item name="actionBarInsetStart">@dimen/keyline_2</item>
+        <item name="spinnerBarInsetStart">@dimen/keyline_2_minus_16dp</item>
+        <item name="popupItemBackground">?android:selectableItemBackground</item>
+        <item name="photoItemForeground">?android:selectableItemBackground</item>
+        <item name="photoItemForegroundBorderless">?android:selectableItemBackground</item>
+
+        <item name="colorPrimary">@color/app_blue</item>
+        <item name="colorPrimaryDark">@color/app_blue_light</item>
+        <item name="colorAccent">@color/white</item>
     </style>
 
-    <style name="AppTheme" parent="AppBaseTheme">
-        <item name="actionBarStyle">@style/AppActionBar</item>
-        <item name="actionMenuTextColor">@color/white</item>
-        <item name="actionBarItemBackground">@drawable/transparent_button</item>
-        <item name="android:spinnerDropDownItemStyle">@style/TextItemWhite</item>
-    </style>
+    <style name="Theme.App" parent="Theme.Base" />
 
-    <style name="TextItemWhite" parent="@style/Widget.AppCompat.Light.DropDownItem.Spinner">
-        <item name="android:textAppearance">@style/TextWhite</item>
-    </style>
 
-    <style name="AppActionBar" parent="@style/Widget.AppCompat.Light.ActionBar">
-        <item name="android:background">@color/app_blue</item>
-        <item name="titleTextStyle">@style/TextWhite</item>
-    </style>
-
-    <style name="TextWhite" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/white</item>
-    </style>
-
-    <style name="StartingTheme" parent="StartingThemeBase"> </style>
-
-    <style name="StartingThemeBase" parent="AppBaseTheme">
-        <item name="windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
+    <!-- STARTING THEME -->
+    <style name="StartingThemeBase" parent="Theme.App">
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/grey</item>
         <item name="android:buttonStyle">@style/StartingThemeButton</item>
     </style>
+
+    <style name="StartingTheme" parent="StartingThemeBase"> </style>
 
     <style name="StartingThemeButton" parent="@android:style/Widget.Button">
         <item name="android:background">@drawable/transparent_button</item>
@@ -42,6 +45,17 @@
         <item name="android:paddingBottom">14dp</item>
     </style>
 
+    <!-- CUSTOM LAYOUT -->
+    <style name="Widget.App.HeaderBar.Spinner.Base" parent="Widget.AppCompat.Light.Spinner.DropDown.ActionBar">
+        <item name="android:background">?android:selectableItemBackground</item>
+        <item name="android:dropDownSelector">?android:selectableItemBackground</item>
+        <item name="android:divider">@null</item>
+        <item name="android:dividerHeight">0dp</item>
+    </style>
+
+    <style name="Widget.App.HeaderBar.Spinner" parent="Widget.App.HeaderBar.Spinner.Base" />
+
+    <!-- MORE -->
     <style name="ResponsiveLayout">
         <item name="android:orientation">vertical</item>
     </style>
